--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -209,9 +209,9 @@
                                             </a>
                                     </div>
                                     <div class="text-center p-4">
-                                        <a class="d-block p mb-2" href="{% url 'detail_closet' user.first_name c.groupID %}">{{c.name}}</a>
+                                        <a class="d-block p mb-2" href="{% url 'detail_closet' user.first_name c.groupID %}" style="font-size:1.3rem;">{{c.name}}</a>
                                     </div>
-                                    <hr width="90%" align="center" style="margin-left: 14px;">
+                                    <hr width="90%" align="center" style="margin-left: 14px; margin-top: 0px; margin-bottom: 0px;">
                                     <div class="text-end p-3">
                                         <a class="d-block p mb-2 text-black-50" href="{% url 'detail_closet' user.first_name c.groupID %}" style='padding-right: 10px;'>{{c.type1}}-{{c.type2}}</a>
                                     </div>
