--- a/muapp/templates/detail_closet.html
+++ b/muapp/templates/detail_closet.html
@@ -48,6 +48,7 @@
                                     {% endif %}
                                 {% endfor %}
                             </div>
+                            {% if photosobject.count != 1 %}
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                               <span class="visually-hidden">Previous</span>
@@ -56,6 +57,7 @@
                               <span class="carousel-control-next-icon" aria-hidden="true"></span>
                               <span class="visually-hidden">Next</span>
                             </button>
+                            {% endif %}
                           </div>
 
                         <table class="table" style="float:left;">
