--- a/muapp/templates/detail_usercodi.html
+++ b/muapp/templates/detail_usercodi.html
@@ -87,9 +87,31 @@
                                 </tr>
                                 {%endif%}
                         </table>
-                        
+                        <div class="d-flex">
+                            <span class="pe-1 text-dark" style="font-size: 18px;">댓글 {{comments|length}}개</span>
+                            <i class="fas fa-comment pt-1" style="color: #57B0F5; font-size: 18px;"></i>
+                                    
+                                <div>
+                                    <span class="text-dark ps-3" style="font-size: 18px;">좋아요</span>
+                                    {% if user.is_authenticated %}
+                                    <span id="like-btn-{{clothesobject.groupID}}" onclick="post_like('{{ clothesobject.groupID }}'); event.stopPropagation();" style="cursor: pointer;">
+                                    {% else %}
+                                    <span id="like-btn-{{clothesobject.groupID}}" onclick="redirectToLogin(); event.stopPropagation();" style="cursor: pointer;"> 
+                                    {% endif %}
+                                    {% if request.user in clothesobject.like.all %}
+                                    <!-- 로그인 한 유저가 좋아요를 누른 유저일때  -->
+                                    <i class="heart-icon fas fa-heart" style="color: #F54C4C; font-size: 17px;"></i>
+                                    {% else %}
+                                    <!-- 로그인 한 유저가 좋아요를 누른 유저가 아닐 때  -->
+                                    <i class="heart-icon far fa-heart" style="color: #F54C4C; font-size: 17px;"></i>
+                                    {% endif %}
+                                    <span id="like-count-{{clothesobject.groupID}}" style="color: black; font-size: 17px;">{{clothesobject.like.count}}</span>
+                                    
+                                    </span>
+                                </div>
+                        </div>
                         {% for comment in comments%}
-                        <div class="comment shadow row mt-4 border border-2{% if forloop.counter|divisibleby:2 %} border-success {% else %} border-primary {% endif %} pt-3 wow fadeInUp" data-wow-delay="0.1s" style="margin-left: 0px;">
+                        <div class="comment shadow row {% if forloop.counter == 1 %}mt-3 {% else %}mt-4 {% endif %}border border-2{% if forloop.counter|divisibleby:2 %} border-success {% else %} border-primary {% endif %} pt-3 wow fadeInUp" data-wow-delay="0.1s" style="margin-left: 0px;">
                             <div class="col">
                                 <p class="comment-info text-dark" style="font-size:0.9rem;">{{ comment.author }}</p>
                             </div>
@@ -102,6 +124,8 @@
                         <div class="comment shadow-sm row mt-4 border border-2 border-success pt-3 wow fadeInUp" data-wow-delay="0.1s" style="margin-left: 0px;">
                             <p>댓글이 없습니다. 댓글을 입력해주세요!</p>
                         </div>
+                        
+
                         {% endfor %}
 
                         <div class="col-12 text-center" style="margin-top: 40px; margin-bottom: 10px;">
@@ -148,6 +172,26 @@
         </div>
     </div>
     <!-- Product End -->
+<script type="text/javascript">
+    function post_like(id) {
+        $.ajax({
+            url: "{%url 'likes' %}", 
+            data: {
+                'groupID': id
+            }, 
+            dataType: "json",
+            success: function (response) { 
+                $('#like-count-'+id).html(response.like_count);
+                $('#like-btn-'+id+' i.heart-icon').toggleClass('fas far');
+            }
+        });
+    }
+    
+    function redirectToLogin() {
+        window.location.href = "{% url 'login' %}";
+    }
+
+    </script>
 {% endblock content %}
 
 
