--- a/muapp/templates/usercodi.html
+++ b/muapp/templates/usercodi.html
@@ -35,8 +35,25 @@
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="{{ forloop.counter0|floatformat:1|delay:0.2 }}s">
                     <div class="p-4 mucodi" style="background-color: #F5F5F5;">  
                         <a class="d-block h5 lh-base mb-4 jamsil text-center border-bottom pb-3" target="_blank" style="color: black; text-shadow: -1px 0px white, 0px 1px white, 1px 0px white, 0px -1px white; font-size: 25px;" href="{% url 'detail_usercodi' c.groupID %}" >{{c.name}}</a>
-                        <a class="d-block h5 lh-base mb-4 jamsil text-center" title="{{c.name}}" href="{% url 'detail_usercodi' c.groupID %}" >
-                            <img src="{{ c.groupID|getGroupIdFirst }}" class="img-thumbnail mt-1 shadow w-75" alt="{{mu.item_title}}" style="border-radius: 20px; width: 240px; height: 360px;"></a>
+                        <div class="position-relative image-container">
+                            <a class="d-block h5 lh-base mb-4 jamsil text-center" title="{{c.name}}" href="{% url 'detail_usercodi' c.groupID %}" >
+                                <img src="{{ c.groupID|getGroupIdFirst }}" class="img-thumbnail mt-1 shadow w-75" alt="{{c.item_title}}" style="border-radius: 20px; width: 240px; height: 360px;"></a>
+                                <div class="d-flex justify-content-center like-container" style="position: absolute; bottom: 50%; left: 0; right: 0;">
+                                    {% if user.is_authenticated %}
+                                    <span style="cursor: pointer;">
+                                        <i id="like-btn-{{c.groupID}}" onclick="post_like('{{ c.groupID }}'); event.stopPropagation();" class="heart-icon {% if request.user in c.like.all %}fas liked{% else %}far{% endif %} fa-heart change-on-hover" style="color: #F54C4C; font-size: 20px;"></i>
+                                    {% else %}
+                                    <span style="cursor: pointer;">
+                                        <i id="like-btn-{{c.groupID}}" onclick="redirectToLogin(); event.stopPropagation();" class="heart-icon {% if request.user in c.like.all %}fas liked{% else %}far{% endif %} fa-heart change-on-hover" style="color: #F54C4C; font-size: 20px;"></i>
+                                    {% endif %}
+                                        <span id="like-count-{{c.groupID}}" style="color: white; font-size: 20px; cursor: default;">{{c.like.count}}</span>
+                                    </span>
+                                <span class="ms-3">
+                                    <i class="fas fa-comment" style="color: #57B0F5; font-size: 20px;"></i>
+                                    <span id="commnet-count-{{c.groupID}}" style="color: white; font-size: 20px;">{{ comments|count_matching_comments:c.groupID }}</span>
+                                </span>
+                            </div>
+                        </div>
                         <div class="text-muted border-top pt-4 d-flex justify-content-between">
                             <small><i class="fa fa-user text-primary me-2 jamsil"></i>{{c.uploadUserName}}</small>
                             <small><i class="fa fas fa-clone text-secondary me-2"></i>{{c.type1}} - {{c.type2}}</small>
@@ -68,6 +85,7 @@
             </div>
         </div>
     </div>
+   
 
 {% comment %} <script>
     function sendDetailUsercodi(event, groupID, index) {
@@ -85,4 +103,54 @@
     }
     </script> {% endcomment %}
     <!-- Blog End -->
+    <script type="text/javascript">
+        function post_like(id) {
+            $.ajax({
+                url: "{%url 'likes' %}", 
+                data: {
+                    'groupID': id
+                }, 
+                dataType: "json",
+                success: function (response) { 
+                    $('#like-count-'+id).html(response.like_count);
+                    $('#like-btn-'+id+' i.heart-icon').toggleClass('fas far');
+                    const iconElement = $('#like-btn-' + id + ' i.heart-icon');
+                    const isNotLiked = iconElement.hasClass('far');
+
+                    if (isNotLiked) {
+                      iconElement.removeClass('far');
+                      iconElement.addClass('fas');
+                    } else {
+                      iconElement.removeClass('fas');
+                      iconElement.addClass('far');
+                    }
+                    iconElement.toggleClass('liked');
+              
+                    
+                  }
+                });
+              }
+        
+              const changeOnHoverIcons = document.querySelectorAll('.change-on-hover');
+              
+              changeOnHoverIcons.forEach((icon) => {
+                  icon.addEventListener('mouseover', () => {
+                      if (icon.classList.contains('far') && !icon.classList.contains('liked')) {
+                          icon.classList.remove('far');
+                          icon.classList.add('fas');
+                        }
+                    });
+                    
+                    icon.addEventListener('mouseout', () => {
+                        if (icon.classList.contains('fas') && !icon.classList.contains('liked') && !icon.classList.contains('hovered')) {
+                            icon.classList.remove('fas');
+                            icon.classList.add('far');
+                        }
+                    });
+                });
+                
+                function redirectToLogin() {
+                    window.location.href = "{% url 'login' %}";
+                }
+        </script>
 {% endblock %}
