--- a/muapp/templates/usercodi.html
+++ b/muapp/templates/usercodi.html
@@ -39,14 +39,21 @@
                             <a class="d-block h5 lh-base mb-4 jamsil text-center" title="{{c.name}}" href="{% url 'detail_usercodi' c.groupID %}" >
                                 <img src="{{ c.groupID|getGroupIdFirst }}" class="img-thumbnail mt-1 shadow w-75" alt="{{c.item_title}}" style="border-radius: 20px; width: 240px; height: 360px;"></a>
                                 <div class="d-flex justify-content-center like-container" style="position: absolute; bottom: 50%; left: 0; right: 0;">
+
                                     {% if user.is_authenticated %}
-                                    <span style="cursor: pointer;">
-                                        <i id="like-btn-{{c.groupID}}" onclick="post_like('{{ c.groupID }}'); event.stopPropagation();" class="heart-icon {% if request.user in c.like.all %}fas liked{% else %}far{% endif %} fa-heart change-on-hover" style="color: #F54C4C; font-size: 20px;"></i>
+                                    <span id="like-btn-{{c.groupID}}" onclick="post_like('{{ c.groupID }}'); event.stopPropagation();" style="cursor: pointer;">
                                     {% else %}
-                                    <span style="cursor: pointer;">
-                                        <i id="like-btn-{{c.groupID}}" onclick="redirectToLogin(); event.stopPropagation();" class="heart-icon {% if request.user in c.like.all %}fas liked{% else %}far{% endif %} fa-heart change-on-hover" style="color: #F54C4C; font-size: 20px;"></i>
+                                    <span id="like-btn-{{c.groupID}}" onclick="redirectToLogin(); event.stopPropagation();" style="cursor: pointer;"> 
                                     {% endif %}
-                                        <span id="like-count-{{c.groupID}}" style="color: white; font-size: 20px; cursor: default;">{{c.like.count}}</span>
+                                    {% if request.user in c.like.all %}
+                                    <!-- 로그인 한 유저가 좋아요를 누른 유저일때  -->
+                                    <i class="heart-icon fas fa-heart" style="color: #F54C4C; font-size: 20px;"></i>
+                                    {% else %}
+                                    <!-- 로그인 한 유저가 좋아요를 누른 유저가 아닐 때  -->
+                                    <i class="heart-icon far fa-heart" style="color: #F54C4C; font-size: 20px;"></i>
+                                    {% endif %}
+                                    <span id="like-count-{{c.groupID}}" style="color: white; font-size: 20px;">{{c.like.count}}</span>
+                                    
                                     </span>
                                 <span class="ms-3">
                                     <i class="fas fa-comment" style="color: #57B0F5; font-size: 20px;"></i>
@@ -106,49 +113,18 @@
     <script type="text/javascript">
         function post_like(id) {
             $.ajax({
-                url: "{%url 'likes' %}", 
-                data: {
-                    'groupID': id
-                }, 
-                dataType: "json",
-                success: function (response) { 
-                    $('#like-count-'+id).html(response.like_count);
-                    $('#like-btn-'+id+' i.heart-icon').toggleClass('fas far');
-                    const iconElement = $('#like-btn-' + id + ' i.heart-icon');
-                    const isNotLiked = iconElement.hasClass('far');
-
-                    if (isNotLiked) {
-                      iconElement.removeClass('far');
-                      iconElement.addClass('fas');
-                    } else {
-                      iconElement.removeClass('fas');
-                      iconElement.addClass('far');
-                    }
-                    iconElement.toggleClass('liked');
-              
-                    
-                  }
-                });
+              url: "{%url 'likes' %}", 
+              data: {
+                'groupID': id
+              }, 
+              dataType: "json",
+              success: function (response) { 
+                $('#like-count-'+id).html(response.like_count);
+                $('#like-btn-'+id+' i.heart-icon').toggleClass('fas far');
               }
-        
-              const changeOnHoverIcons = document.querySelectorAll('.change-on-hover');
-              
-              changeOnHoverIcons.forEach((icon) => {
-                  icon.addEventListener('mouseover', () => {
-                      if (icon.classList.contains('far') && !icon.classList.contains('liked')) {
-                          icon.classList.remove('far');
-                          icon.classList.add('fas');
-                        }
-                    });
-                    
-                    icon.addEventListener('mouseout', () => {
-                        if (icon.classList.contains('fas') && !icon.classList.contains('liked') && !icon.classList.contains('hovered')) {
-                            icon.classList.remove('fas');
-                            icon.classList.add('far');
-                        }
-                    });
-                });
-                
+            });
+          }
+
                 function redirectToLogin() {
                     window.location.href = "{% url 'login' %}";
                 }
