--- a/muapp/templates/detail_usercodi.html
+++ b/muapp/templates/detail_usercodi.html
@@ -87,9 +87,9 @@
                                 </tr>
                                 {%endif%}
                         </table>
-                        <div class="d-flex">
+                        <div class="d-flex wow fadeInUp" data-wow-delay="0.1s">
                             <span class="pe-1 text-dark" style="font-size: 18px;">댓글 {{comments|length}}개</span>
-                            <i class="fas fa-comment pt-1" style="color: #57B0F5; font-size: 18px;"></i>
+                            <i class="fas fa-comment pt-1" style="color: #57B0F5; font-size: 17px;"></i>
                                     
                                 <div>
                                     <span class="text-dark ps-3" style="font-size: 18px;">좋아요</span>
@@ -105,7 +105,7 @@
                                     <!-- 로그인 한 유저가 좋아요를 누른 유저가 아닐 때  -->
                                     <i class="heart-icon far fa-heart" style="color: #F54C4C; font-size: 17px;"></i>
                                     {% endif %}
-                                    <span id="like-count-{{clothesobject.groupID}}" style="color: black; font-size: 17px;">{{clothesobject.like.count}}</span>
+                                    <span id="like-count-{{clothesobject.groupID}}" style="color: black; font-size: 18px;">{{clothesobject.like.count}}</span>
                                     
                                     </span>
                                 </div>
@@ -121,8 +121,8 @@
                             <p class="comment-text lh-base border border-2 p-3 shadow-sm text-dark">{{ comment.text }}</p>
                         </div>
                         {% empty %}
-                        <div class="comment shadow-sm row mt-4 border border-2 border-success pt-3 wow fadeInUp" data-wow-delay="0.1s" style="margin-left: 0px;">
-                            <p>댓글이 없습니다. 댓글을 입력해주세요!</p>
+                        <div class="comment shadow-sm row mt-3 border border-2 border-success pt-3 wow fadeInUp" data-wow-delay="0.1s" style="margin-left: 0px;">
+                            <p class="p-2">댓글이 없습니다. 댓글을 입력해주세요!</p>
                         </div>
                         
 
@@ -151,17 +151,17 @@
                         </div>
 
                         {% if user.is_authenticated %}
-                        <form method="post" class="border pb-3 pt-2 border-2 border-primary wow fadeIn" data-wow-delay="0.1s" style="border-radius:10px">
+                        <form method="post" class="border pb-3 pt-2 border-2 border-primary wow fadeIn bg-light" data-wow-delay="0.1s" style="border-radius:10px">
                         {% csrf_token %}
                         <div class="mb-3 jamsil">
-                            <p class="pt-2"><label for="comment">댓글</label></p>
+                            <p class="pt-2 text-dark"><label for="comment">댓글</label></p>
                             <textarea name="text" class="form-control shadow-sm" id="comment" cols="30" rows="5" placeholder="댓글을 입력하세요!" style="resize: none;"></textarea>
                         </div>
                         <button type="submit" class="btn btn-outline-success border-2" style="float: right;">댓글 작성</button>
                         </form>
                         {% else %}
                         <div class="mb-3 jamsil border pb-3 pt-2 border-2 border-primary wow fadeIn" data-wow-delay="0.1s" style="border-radius:10px">
-                            <p class="pt-2"><label for="comment">댓글</label></p>
+                            <p class="pt-2 text-dark"><label for="comment">댓글</label></p>
                             <input class="form-control" id="disabledInput" type="text" placeholder="로그인을 하고 댓글을 남겨보세요!" disabled>
                             <button type="button" class="btn btn-outline-primary mt-3" onclick="location.href='{% url 'login' %}?next={{ request.path }}'">로그인</button>
                         </div>
