가상피팅 수정

--- a/muapp/templates/view_closet.html
+++ b/muapp/templates/view_closet.html
@@ -169,7 +169,7 @@
                                         
                                     </div>
                                     {% if c.ucodi == True %}
-                                    <a href="{% url 'detail_usercodi' c.groupID %}"><span class="translate-middle badge bg-danger rounded-pill jamsil shadow" style="position: relative; left: 290px; font-size: 1rem;">자랑!</span></a>
+                                    <a href="{% url 'detail_usercodi' c.groupID %}"><span class="translate-middle badge bg-danger rounded-pill jamsil shadow" style="position: relative; left: 98%; font-size: 1rem;">자랑!</span></a>
                                     {% endif %}   
 
                                     <div class="delete_checkbox position-absolute" style="left: 25px; top: 15px; display: none;" >
