--- a/muapp/templates/about.html
+++ b/muapp/templates/about.html
@@ -27,7 +27,7 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img position-relative overflow-hidden p-5 pe-0">
-                        <img class="img-fluid w-100" src="img/about.jpg">
+                        <img class="img-fluid w-100" src="{% static 'img/about.png' %}">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
@@ -54,7 +54,7 @@
                 <h1 class="display-5 mb-3 jamsil">조원 프로필</h1>
                 <p class="jamsil">9조 조원의 소개입니다.</p>
             </div>
-            <div class="row g-4">
+            <div class="row g-4 jamsil">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="bg-white h-100 p-4 p-xl-5">
                         <div class="text-left">
