--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -218,7 +218,7 @@
                                     </div>
                                 </div>
                                 {% if c.ucodi == True %}
-                                <a href="{% url 'detail_usercodi' c.groupID %}"><span class="translate-middle badge bg-danger rounded-pill jamsil shadow" style="position: relative; left: 290px; font-size: 1rem;">자랑!</span></a>
+                                <a href="{% url 'detail_usercodi' c.groupID %}"><span class="translate-middle badge bg-danger rounded-pill jamsil shadow" style="position: relative; left: 98%; font-size: 1rem;">자랑!</span></a>
                                 {% endif %}            
                             </div>
                             {% endif%}
