--- a/muapp/templates/mypage.html
+++ b/muapp/templates/mypage.html
@@ -35,6 +35,14 @@
                     <a href="{% url 'user_style' user.first_name %}" class="btn btn-secondary btn-lg rounded-pill py-sm-2 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black; font-size:20px">선호하는 스타일</a>
                 </div>
             </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="bg-light text-center h-100 p-4 p-xl-5" style="box-shadow: 0 0 5px black; border-radius: 20px;">
+                    <img class="img-fluid mb-4" src="{% static 'img/icon-2.jpg' %}" alt="">
+                    <h4 class="mb-3 jamsil">좋아요한 스타일</h4>
+                    <p class="mb-4 jamsil">좋아하는 스타일 보러가기</p>
+                    <a href="{% url 'userlike'%}" class="btn btn-danger btn-lg rounded-pill py-sm-2 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black; font-size:20px;">좋아요한 스타일</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
